--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,80 @@
 #line {
     top: -8px;
     bottom: 100px;
-    left: 65px;
-    right: 100px;
-    height: 500px;
-    width: 800px;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 150px;
 }
 
 #choropeth {
     top: 27px;
     bottom: 100px;
-    left: 21px;
-    right: 100px;
+    height: 500px;
+    width: 500px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+}
+
+#symbol {
+    top: -8px;
+    bottom: 100px;
     height: 500px;
     width: 800px;
+    margin-bottom: 50px;
+}
+
+#bubble {
+    top: 27px;
+    bottom: 100px;
+    height: 500px;
+    width: 500px;
+    margin-bottom: 150px;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #e6aaaa;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+h1 {
+    font-size: 24px;
+    color: #333;
+}
+
+p {
+    font-size: 16px;
+    color: #666;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+}
+
+.page {
+    width: 850px;
+    background-color: white;
+    margin: auto;
+    padding: 50px;
+    padding-top: 35px;
 }
